# oligo

./: .gitignore  Doxyfile  LICENSE  Makefile.am  README.md  configure.ac
src/: Makefile.am  cluster.c  cluster.h  fasta.c  fasta.h  newick.c  newick.h  oligo.c  sequence.c  sequence.h  tools.c  tools.h
tests/: Makefile.am  test_fasta.c  test_fasta.fa  test_fasta.nwk  test_sequence.c
